Fix CSS problem making landing page content right aligned

--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@ pure-g [class *= "pure-u"] {
 .not-fat {
   width: 60%;
   margin-left: auto;
-  margin-right auto;
+  margin-right: auto;
 }
 
 .just-centered {
